--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="heading d-flex align-center fixed top-0 left-0">
+        <div class="heading-title-icon d-flex align-center">
+            <h1 class="heading-title">
+                <a class="link" href="/">Flash Shop</a>
+            </h1>
+        </div>
+        <div class="search-box-container relative">
+            <input class="search-box-input" placeholder="Search Products">
+            <span class="material-icons-outlined absolute top-0 left-0">
+                search
+                </span>
+        </div>
+        <nav class="navigation">
+            <ul class="list-non-bullet d-flex align-center gap">
+                <li class="list-item-inline">
+                    <a href="/" class="link cursor">
+                        <span class="nav-icon material-icons-outlined">
+                            favorite_border
+                            </span>
+                    </a>
+                </li>
+                <li class="list-item-inline">
+                    <a href="./cart.html" class="link cursor">
+                        <span class="nav-icon material-icons-outlined">
+                            shopping_cart
+                            </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <div class="d-flex wrap gap" id="products"></div>
     <script type="module" src="./index.js"></script>  
 </body>
